Added code for box spawning
Added code to read in the box colours and solutions from the text files, added initial code for box spawner object that will create a series of boxes with colours based on the information from these text files

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,22 +153,22 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints/CommandInterface
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint.IORail2_IOconnectCylinders_001_Blueprint
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint.IORail2_IOconnectBox_001_Blueprint
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 
 [RootWindow]
-ScreenPosition=X=317.000 Y=181.000
-WindowSize=X=1275.000 Y=667.000
+ScreenPosition=X=316.667 Y=180.667
+WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -185,7 +185,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1037,26 +1037,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem3=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem5=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
-MRUItem6=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem8=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem9=/Game/Geometry/Meshes/CubeMaterial
-MRUItem10=/Game/PuzzleBP/Blueprints/Cube
-MRUItem11=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
-MRUItem12=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem13=/Game/PuzzleBP/Maps/PuzzleExampleMap
-MRUItem14=/Game/ParticleFX/sprayTestBP
-MRUItem15=/Game/Audio/Spraysounds/spraySounds
-MRUItem16=/Game/PuzzleBP/Maps/ParticleTest
-MRUItem17=/Game/ParticleFX/spraySystem
-MRUItem18=/Game/PuzzleBP/Blueprints/CommandInterface/ColourButton
-MRUItem19=/Game/PuzzleBP/Blueprints/CommandInterface/InputEnum
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem1=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem8=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
+MRUItem9=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem10=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem11=/Game/Geometry/Meshes/CubeMaterial
+MRUItem12=/Game/PuzzleBP/Blueprints/Cube
+MRUItem13=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
+MRUItem14=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem15=/Game/PuzzleBP/Maps/PuzzleExampleMap
+MRUItem16=/Game/ParticleFX/sprayTestBP
+MRUItem17=/Game/Audio/Spraysounds/spraySounds
+MRUItem18=/Game/PuzzleBP/Maps/ParticleTest
+MRUItem19=/Game/ParticleFX/spraySystem
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2268,6 +2268,23 @@ IORail2_IOconnectBox_001_Blueprint_C.Input=True
 IORail2_IOconnectBox_001_Blueprint_C.Actor=True
 IORail2_IOconnectBox_001_Blueprint_C.Tick=True
 IORail2_IOconnectBox_001_Blueprint_C.Default=True
+BoxSpawner_C.Tick=True
+BoxSpawner_C.Replication=True
+BoxSpawner_C.Rendering=True
+BoxSpawner_C.Collision=True
+BoxSpawner_C.Actor=True
+BoxSpawner_C.Input=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.Interfaces=True
+LevelScriptBlueprint.Packaging=True
+GameEnvironment_C.Default=True
+BoxChecker_C.Tick=True
+BoxChecker_C.Replication=True
+BoxChecker_C.Rendering=True
+BoxChecker_C.Collision=True
+BoxChecker_C.Actor=True
+BoxChecker_C.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2455,9 +2472,9 @@ DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
@@ -2497,21 +2514,23 @@ ControlPanel_C=
 Pawn=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor=
-GameEnvironment_C=
-LevelScriptActor=
+GameEnvironment_C="\"Object.PuzzleSolution\" "
+LevelScriptActor="\"Object.PuzzleSolution\" "
 Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 StaticMeshSocket="\"Object.RelativeLocation\" "
 Box_Bp_C=
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C=
-ALAN_C="\"Object.IfPressed\" "
+OutputDisplay_C="\"Object.PuzzleToLoad\" "
+ALAN_C=
 ConveyorBelt_C=
 Cube_C="\"Object.Actor.Tags\" "
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C=
 IORail2_IOconnectBox_001_Blueprint_C=
+BoxSpawner_C="\"Object.BoxColours\" "
+BoxChecker_C="\"Object.BoxSolutions\" "
 
 [MaterialEditor]
 PrimType=2
@@ -2702,6 +2721,7 @@ UserDefinedEnum.Enumerators=True
 TextRenderComponent.Text=True
 K2Node_VariableGet.Variable=True
 LevelEditorPlaySettings.PlayInEditor=True
+LevelScriptBlueprint.ClassOptions=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2744,10 +2764,10 @@ StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Ren
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ALAN_C=
-BrushComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
@@ -2825,13 +2845,13 @@ CameraActor=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physic
 Actor=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Brush=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TextRenderComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-TriggerVolume=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+TriggerVolume=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 GameEnvironment_C=
 StaticMeshSocket=
 Cube_Blueprint_C=
 Box_Bp_C=
-Cube_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Cube_C=
 ConveyorBelt_C=
 BillboardComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ColourChanger0_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2844,6 +2864,8 @@ ColourChanger7_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.P
 BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BoxSpawner_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BoxChecker_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
