Added BG ambience and improved button beeps

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,22 +153,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Audio/SwitchButtonSounds
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 
 [RootWindow]
-ScreenPosition=X=316.667 Y=180.667
-WindowSize=X=1273.333 Y=665.333
+ScreenPosition=X=316.000 Y=180.000
+WindowSize=X=1273.000 Y=665.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -185,7 +180,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1037,26 +1032,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem1=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem8=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
-MRUItem9=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem10=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem11=/Game/Geometry/Meshes/CubeMaterial
-MRUItem12=/Game/PuzzleBP/Blueprints/Cube
-MRUItem13=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
-MRUItem14=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem15=/Game/PuzzleBP/Maps/PuzzleExampleMap
-MRUItem16=/Game/ParticleFX/sprayTestBP
-MRUItem17=/Game/Audio/Spraysounds/spraySounds
-MRUItem18=/Game/PuzzleBP/Maps/ParticleTest
-MRUItem19=/Game/ParticleFX/spraySystem
+MRUItem0=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem1=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem2=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/Cube
+MRUItem5=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem6=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem7=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem8=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem9=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem14=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
+MRUItem15=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem16=/Game/Geometry/Meshes/CubeMaterial
+MRUItem17=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
+MRUItem18=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem19=/Game/PuzzleBP/Maps/PuzzleExampleMap
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2285,6 +2280,9 @@ BoxChecker_C.Rendering=True
 BoxChecker_C.Collision=True
 BoxChecker_C.Actor=True
 BoxChecker_C.Input=True
+SoundNodeWavePlayer.WavePlayer=True
+SoundNodeMixer.Mixer=True
+SoundNodeDelay.Delay=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2433,6 +2431,10 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Blueprints/ColourChanger0.ColourChanger0=1
 /Game/Materials/CubeMats/CubeMaterial.CubeMaterial=1
 /Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement.Box_Brush_Movement=1
+/Game/PuzzleBP/Blueprints/Cube.Cube=1
+/Game/Audio/SwitchButtonSounds/switch1to38.switch1to38=1
+/Game/Audio/Beep_Buttons/SFX_Beep_Buttons.SFX_Beep_Buttons=1
+/Game/Audio/Click12345/SFX_ButtonClick.SFX_ButtonClick=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp;
