Added more code to the box spawner
Added code to the box spawner so that it will only spawn boxes if appropriate conditions are met

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,17 +153,23 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Audio/SwitchButtonSounds
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Cube.Cube
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1273.000 Y=665.000
+WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -180,7 +186,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1032,17 +1038,17 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem1=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem2=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem4=/Game/PuzzleBP/Blueprints/Cube
-MRUItem5=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem6=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem7=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem8=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem9=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem1=/Game/PuzzleBP/Blueprints/Cube
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem6=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem7=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem8=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem9=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem10=/Game/PuzzleBP/Blueprints/ColourChanger0
 MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
 MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
 MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
@@ -2283,6 +2289,8 @@ BoxChecker_C.Input=True
 SoundNodeWavePlayer.WavePlayer=True
 SoundNodeMixer.Mixer=True
 SoundNodeDelay.Delay=True
+BoxSpawner_C.Default=True
+BoxChecker_C.Default=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2524,15 +2532,15 @@ Box_Bp_C=
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C="\"Object.PuzzleToLoad\" "
-ALAN_C=
+OutputDisplay_C=
+ALAN_C="\"Object.CommandsExecuted\" "
 ConveyorBelt_C=
-Cube_C="\"Object.Actor.Tags\" "
+Cube_C="\"Object.colour\" "
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C=
 IORail2_IOconnectBox_001_Blueprint_C=
 BoxSpawner_C="\"Object.BoxColours\" "
-BoxChecker_C="\"Object.BoxSolutions\" "
+BoxChecker_C="\"Object.BoxColours\" "
 
 [MaterialEditor]
 PrimType=2
@@ -2867,7 +2875,7 @@ BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BoxSpawner_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-BoxChecker_C=
+BoxChecker_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
